--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ config.ini
 .my.cnf
 .viminfo
 .profile
+.ipython/profile_default/startup
+.ipython/profile_default/startup/
 .pythonstartup.py
 .bashrc
 .vimrc
